--- a/SQL/02 - Create_alter_delete_zadani.ipynb
+++ b/SQL/02 - Create_alter_delete_zadani.ipynb
@@ -33,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 7,
       "metadata": {
         "id": "1NbVIogAf7rh"
       },
@@ -42,16 +42,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: mysql-connector in c:\\programovani\\spskladno\\venv\\lib\\site-packages (2.2.9)\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "[notice] A new release of pip is available: 25.0.1 -> 25.3\n",
-            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+            "Requirement already satisfied: mysql-connector in /Users/esthergabrielova/Downloads/skola-pro-clone/sps-it3-programovani/venv/lib/python3.13/site-packages (2.2.9)\n"
           ]
         }
       ],
@@ -74,13 +65,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "id": "rvOZMM5Mf7ry"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'pripojeni'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmysql\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mconnector\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpripojeni\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# tento příkaz nás připojí do databáze\u001b[39;00m\n\u001b[32m      5\u001b[39m mydb = mysql.connector.connect(\n\u001b[32m      6\u001b[39m     host = HOST\n\u001b[32m      7\u001b[39m     ,user = USER\n\u001b[32m      8\u001b[39m     ,password = PASSWORD\n\u001b[32m      9\u001b[39m     ,database = DATABASE\n\u001b[32m     10\u001b[39m ) \n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pripojeni'"
+          ]
+        }
+      ],
       "source": [
         "import mysql.connector\n",
+        "from pripojeni import *\n",
         "\n",
         "# tento příkaz nás připojí do databáze\n",
         "mydb = mysql.connector.connect(\n",
